# library

./: .browserslistrc  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  dotenv_.py  main.py  pyproject.toml  pytest.ini  requirements.txt
__tests__/: buffers.py  test_main.py
__tests__/test_main/: moks.py  test_main.py  test_main_new_status_book.py  test_main_remove_book.py  test_main_search_book.py
__tests__/test_main/parameters/: parameters_main_add_book.py  parameters_main_new_status_book.py  parameters_main_remove_book.py  parameters_main_search_book.py
project/: libraries.py  library.py  models.py  postcresbase.py
tests/: pytest.ini
